examples/test/testpolicy6130.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6130
  namespace: namespace251
spec:
  podSelector:
    matchLabels:
      key24: value12
      key44: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value37
          key0: value25
          key8: value13
      podSelector:
        matchLabels:
          key32: value42
